--- a/documentation/docs/graphql/resolvers.mdx
+++ b/documentation/docs/graphql/resolvers.mdx
@@ -245,11 +245,6 @@ When using `NestjsQueryGraphQLModule` or `CRUDResolver` you can define a number 
 
 * `enableSubscriptions?` - Set to `true` to enable graphql subscriptions. See [Subscriptions](./subscriptions.mdx).
 
-* `pagingStrategy?` - Specify to use an alternate paging strategy (`CURSOR`, `OFFSET`, 'NONE'). See [Paging Strategy](#paging-strategy).
-
-* `enableTotalCount?` - When using `CURSOR` or `OFFSET` based paging set to true to expose a `totalCount` field on all
-connection from this resolver.
-
 * `enableAggregate?` - When set to true an aggregate query will be enabled on the type and all relations (unless the explicitly disable it). See [Aggregation](./aggregations.mdx)
 
 * `create` - In addition to [`ResolverOptions`](#resolveroptions) you can also specify the following
@@ -258,15 +253,7 @@ connection from this resolver.
     * `CreateManyInput` - The `InputType` to use for create many mutations.
 
 * `read` - In addition to [`ResolverOptions`](#resolveroptions) you can also specify the following
-    * `QueryArgs` - The `ArgsType` to use to filter records in `queryMany` endpoint.
-    * `Connection` - The `ObjectType` to return from the `queryMany` endpoint.
-    * `pagingStrategy?` - Specify to use an alternate paging strategy (`CURSOR`, `OFFSET`, 'NONE'). See [Paging Strategy](#paging-strategy).
-    * `enableTotalCount?` - When using `CURSOR` or `OFFSET` based paging set to true to expose a `totalCount` field on
-    the connection.
-    * `defaultResultSize=10` - The default number of results to return
-    * `maxResultsSize=50` - The maximum number of results an end user can specify to return from a query.
-    * `defaultSort=[]` - The default sort to use when querying for records.
-    * `defaultFilter={}` - The default filter to use when querying for records.
+    * `QueryArgs` - Specify to override the auto-generated `ArgsType` to use to filter records in `queryMany` endpoint.
 
 * `update` - In addition to [`ResolverOptions`](#resolveroptions) you can also specify the following
     * `UpdateDTOClass` - The input DTO to use for update mutations.
@@ -714,507 +701,6 @@ export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
 
 ---
 
-### Default Filter
-
-When querying the default filter is empty. You can specify a default filter by using the `read.defaultFilter` option.
-
-In this example we specify the default filter to be `completed IS TRUE`.
-
-<Tabs
-  defaultValue="module"
-  values={[
-    { label: 'NestjsQueryGraphQLModule', value: 'module', },
-    { label: 'CRUDResolver', value: 'resolver', },
-  ]
-}>
-<TabItem value="module">
-
-```ts title="todo-item.module.ts"
-import { NestjsQueryGraphQLModule } from '@nestjs-query/query-graphql';
-import { NestjsQueryTypeOrmModule } from '@nestjs-query/query-typeorm';
-import { Module } from '@nestjs/common';
-import { AuthGuard } from '../auth.guard';
-import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemEntity } from './todo-item.entity';
-
-const guards = [AuthGuard];
-
-@Module({
-  imports: [
-    NestjsQueryGraphQLModule.forFeature({
-      imports: [NestjsQueryTypeOrmModule.forFeature([TodoItemEntity])],
-      resolvers: [{
-        DTOClass: TodoItemDTO,
-        EntityClass: TodoItemEntity,
-        read: { defaultFilter: { completed: { is: true } } },
-      }],
-    }),
-  ],
-})
-export class TodoItemModule {}
-```
-
-</TabItem>
-<TabItem value="resolver">
-
-```ts title="todo-item.resolver.ts"
-import { QueryService, InjectQueryService } from '@nestjs-query/core';
-import { CRUDResolver } from '@nestjs-query/query-graphql';
-import { Resolver } from '@nestjs/graphql';
-import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemEntity } from './todo-item.entity';
-
-@Resolver()
-export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
-  read: { defaultFilter: { completed: { is: true } } },
-}) {
-  constructor(
-      @InjectQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
-  ) {
-    super(service);
-  }
-}
-```
-
-</TabItem>
-</Tabs>
-
----
-
-### Default Paging
-
-By default all results will be limited to 10 records, with a max of 50 records returned.
-
-To override the default you can override the following options:
-
-* `read.defaultResultSize` - The default number of results to return.
-* `read.maxResultSize` - The maximum number of results an end user can specify to return.
-
-In this example we specify the `defaultResultSize` to 5 and `maxResultsSize` to 20.
-
-<Tabs
-  defaultValue="module"
-  values={[
-    { label: 'NestjsQueryGraphQLModule', value: 'module', },
-    { label: 'CRUDResolver', value: 'resolver', },
-  ]
-}>
-<TabItem value="module">
-
-```ts title="todo-item.module.ts"
-import { NestjsQueryGraphQLModule } from '@nestjs-query/query-graphql';
-import { NestjsQueryTypeOrmModule } from '@nestjs-query/query-typeorm';
-import { Module } from '@nestjs/common';
-import { AuthGuard } from '../auth.guard';
-import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemEntity } from './todo-item.entity';
-
-const guards = [AuthGuard];
-
-@Module({
-  imports: [
-    NestjsQueryGraphQLModule.forFeature({
-      imports: [NestjsQueryTypeOrmModule.forFeature([TodoItemEntity])],
-      resolvers: [{
-        DTOClass: TodoItemDTO,
-        EntityClass: TodoItemEntity,
-        read: { defaultResultSize: 5, maxResultsSize: 20 },
-      }],
-    }),
-  ],
-})
-export class TodoItemModule {}
-```
-
-</TabItem>
-<TabItem value="resolver">
-
-```ts title="todo-item.resolver.ts"
-import { QueryService, InjectQueryService } from '@nestjs-query/core';
-import { CRUDResolver } from '@nestjs-query/query-graphql';
-import { Resolver } from '@nestjs/graphql';
-import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemEntity } from './todo-item.entity';
-
-@Resolver()
-export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
-  read: { defaultResultSize: 5, maxResultsSize: 20 },
-}) {
-  constructor(
-      @InjectQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
-  ) {
-    super(service);
-  }
-}
-```
-
-</TabItem>
-</Tabs>
-
----
-
-### Paging Strategy
-
-By default `nestjs-query` uses a `cursor` based paging strategy and returns a [connection](https://relay.dev/graphql/connections.htm) for all query many endpoints.
-
-For a more in-depth overview of paging check out the [paging docs](./paging.mdx)
-
-You can override the default `pagingStrategy` to one of the following alternatives
-
-* `OFFSET` - sets paging to allow `limit` and `offset` fields, and returns an `ArrayConnection`.
-* `NONE` - turn off all paging and always return an `ArrayConnection`.
-
-When using the `OFFSET` strategy your the paging arguments for a many query will accept a `limit` and/or `offset`. This will also change the return type from a `CursorConnection` to an `ArrayConnection`.
-
-<Tabs
-  defaultValue="module"
-  values={[
-    { label: 'NestjsQueryGraphQLModule', value: 'module', },
-    { label: 'CRUDResolver', value: 'resolver', },
-  ]
-}>
-<TabItem value="module">
-
-```ts title="todo-item.module.ts" {14}
-import { NestjsQueryGraphQLModule, PagingStrategies } from '@nestjs-query/query-graphql';
-import { NestjsQueryTypeOrmModule } from '@nestjs-query/query-typeorm';
-import { Module } from '@nestjs/common';
-import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemEntity } from './todo-item.entity';
-
-@Module({
-  imports: [
-    NestjsQueryGraphQLModule.forFeature({
-      imports: [NestjsQueryTypeOrmModule.forFeature([TodoItemEntity])],
-      resolvers: [{
-        DTOClass: TodoItemDTO,
-        EntityClass: TodoItemEntity,
-        pagingStrategy: PagingStrategies.OFFSET,
-      }],
-    }),
-  ],
-})
-export class TodoItemModule {}
-```
-
-</TabItem>
-<TabItem value="resolver">
-
-```ts title="todo-item.resolver.ts" {9}
-import { QueryService, InjectQueryService } from '@nestjs-query/core';
-import { CRUDResolver, PagingStrategies } from '@nestjs-query/query-graphql';
-import { Resolver } from '@nestjs/graphql';
-import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemEntity } from './todo-item.entity';
-
-@Resolver()
-export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
-  pagingStrategy: PagingStrategies.OFFSET,
-}) {
-  constructor(
-      @InjectQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
-  ) {
-    super(service);
-  }
-}
-```
-
-</TabItem>
-</Tabs>
-
-To disable paging entirely you can use the `NONE` `pagingStrategy`. When using `NONE` an `ArrayConnection` will be returned.
-
-<Tabs
-  defaultValue="module"
-  values={[
-    { label: 'NestjsQueryGraphQLModule', value: 'module', },
-    { label: 'CRUDResolver', value: 'resolver', },
-  ]
-}>
-<TabItem value="module">
-
-```ts title="todo-item.module.ts" {14}
-import { NestjsQueryGraphQLModule, PagingStrategies } from '@nestjs-query/query-graphql';
-import { NestjsQueryTypeOrmModule } from '@nestjs-query/query-typeorm';
-import { Module } from '@nestjs/common';
-import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemEntity } from './todo-item.entity';
-
-@Module({
-  imports: [
-    NestjsQueryGraphQLModule.forFeature({
-      imports: [NestjsQueryTypeOrmModule.forFeature([TodoItemEntity])],
-      resolvers: [{
-        DTOClass: TodoItemDTO,
-        EntityClass: TodoItemEntity,
-        pagingStrategy: PagingStrategies.NONE,
-      }],
-    }),
-  ],
-})
-export class TodoItemModule {}
-```
-
-</TabItem>
-<TabItem value="resolver">
-
-```ts title="todo-item.resolver.ts" {9}
-import { QueryService, InjectQueryService } from '@nestjs-query/core';
-import { CRUDResolver, PagingStrategies } from '@nestjs-query/query-graphql';
-import { Resolver } from '@nestjs/graphql';
-import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemEntity } from './todo-item.entity';
-
-@Resolver()
-export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
-  pagingStrategy: PagingStrategies.NONE,
-}) {
-  constructor(
-      @InjectQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
-  ) {
-    super(service);
-  }
-}
-```
-
-</TabItem>
-</Tabs>
-
----
-
-### Paging with Total Count
-
-:::note
-This section **ONLY** applies to `CURSOR` connections.
-:::
-:::warning
-Enabling `totalCount` can be expensive. If your table is large the `totalCount` query may be expensive, use with caution.
-:::
-:::info
-The `totalCount` field is not eagerly fetched. It will only be executed if the field is queried from the client.
-:::
-
-When using the `CURSOR` (the default) or OFFSET paging strategy  you have the option to expose a `totalCount` field to
-allow clients to fetch a total count of records in a connection.
-
-To enable the `totalCount` field for connections (including relations) in a resolver set the `enableTotalCount` option to `true`.
-
-<Tabs
-  defaultValue="module"
-  values={[
-    { label: 'NestjsQueryGraphQLModule', value: 'module', },
-    { label: 'CRUDResolver', value: 'resolver', },
-  ]
-}>
-<TabItem value="module">
-
-```ts title="todo-item.module.ts" {14}
-import { NestjsQueryGraphQLModule, PagingStrategies } from '@nestjs-query/query-graphql';
-import { NestjsQueryTypeOrmModule } from '@nestjs-query/query-typeorm';
-import { Module } from '@nestjs/common';
-import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemEntity } from './todo-item.entity';
-
-@Module({
-  imports: [
-    NestjsQueryGraphQLModule.forFeature({
-      imports: [NestjsQueryTypeOrmModule.forFeature([TodoItemEntity])],
-      resolvers: [{
-        DTOClass: TodoItemDTO,
-        EntityClass: TodoItemEntity,
-        enableTotalCount: true,
-      }],
-    }),
-  ],
-})
-export class TodoItemModule {}
-```
-
-</TabItem>
-<TabItem value="resolver">
-
-```ts title="todo-item.resolver.ts" {9}
-import { QueryService, InjectQueryService } from '@nestjs-query/core';
-import { CRUDResolver, PagingStrategies } from '@nestjs-query/query-graphql';
-import { Resolver } from '@nestjs/graphql';
-import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemEntity } from './todo-item.entity';
-
-@Resolver()
-export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
-  enableTotalCount: true,
-}) {
-  constructor(
-      @InjectQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
-  ) {
-    super(service);
-  }
-}
-```
-
-</TabItem>
-</Tabs>
-
-When setting `enableTotalCount` to `true` you will be able to query for `totalCount` on `cursor` or offset connections
-
-<Tabs
-  defaultValue="graphql"
-  values={[
-    { label: 'GraphQL', value: 'graphql', },
-    { label: 'Response', value: 'response', },
-  ]
-}>
-<TabItem value="graphql">
-
-```graphql
-{
-  todoItems {
-    totalCount
-    pageInfo{
-      hasNextPage
-      hasPreviousPage
-      startCursor
-      endCursor
-    }
-    edges {
-      node {
-        id
-        title
-        description
-      }
-    }
-  }
-}
-
-```
-
-</TabItem>
-<TabItem value="response">
-
-```json
-{
-  "data": {
-    "todoItems": {
-      "totalCount": 5,
-      "pageInfo": {
-        "hasNextPage": false,
-        "hasPreviousPage": false,
-        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
-        "endCursor": "YXJyYXljb25uZWN0aW9uOjQ="
-      },
-      "edges": [
-        {
-          "node": {
-            "id": "1",
-            "title": "Create Nest App",
-            "description": null
-          }
-        },
-        {
-          "node": {
-            "id": "2",
-            "title": "Create Entity",
-            "description": null
-          }
-        },
-        {
-          "node": {
-            "id": "3",
-            "title": "Create Entity Service",
-            "description": null
-          }
-        },
-        {
-          "node": {
-            "id": "4",
-            "title": "Add Todo Item Resolver",
-            "description": null
-          }
-        },
-        {
-          "node": {
-            "id": "5",
-            "title": "How to create item With Sub Tasks",
-            "description": null
-          }
-        }
-      ]
-    }
-  }
-}
-```
-
-</TabItem>
-</Tabs>
-
----
-
-### Default Sort
-
-When querying the default sort is based on the persistence layer. You can override the default by providing the `defaultSort` option.
-
-In this example we specify the default sort to be by `title`.
-
-<Tabs
-  defaultValue="module"
-  values={[
-    { label: 'NestjsQueryGraphQLModule', value: 'module', },
-    { label: 'CRUDResolver', value: 'resolver', },
-  ]
-}>
-<TabItem value="module">
-
-```ts title="todo-item.module.ts"
-import { SortDirection } from '@nestjs-query/core'
-import { NestjsQueryGraphQLModule } from '@nestjs-query/query-graphql';
-import { NestjsQueryTypeOrmModule } from '@nestjs-query/query-typeorm';
-import { Module } from '@nestjs/common';
-import { AuthGuard } from '../auth.guard';
-import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemEntity } from './todo-item.entity';
-
-const guards = [AuthGuard];
-
-@Module({
-  imports: [
-    NestjsQueryGraphQLModule.forFeature({
-      imports: [NestjsQueryTypeOrmModule.forFeature([TodoItemEntity])],
-      resolvers: [{
-        DTOClass: TodoItemDTO,
-        EntityClass: TodoItemEntity,
-        read: { defaultSort: [{ field: 'title', direction: SortDirection.ASC }] },
-      }],
-    }),
-  ],
-})
-export class TodoItemModule {}
-```
-
-</TabItem>
-<TabItem value="resolver">
-
-```ts title="todo-item.resolver.ts"
-import { SortDirection, QueryService, InjectQueryService } from '@nestjs-query/core';
-import { CRUDResolver } from '@nestjs-query/query-graphql';
-import { Resolver } from '@nestjs/graphql';
-import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemEntity } from './todo-item.entity';
-
-@Resolver()
-export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
-  read: { defaultSort: [{ field: 'title', direction: SortDirection.ASC }] },
-}) {
-  constructor(
-      @InjectQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
-  ) {
-    super(service);
-  }
-}
-```
-
-</TabItem>
-</Tabs>
-
 ### Override Endpoint Name
 
 If you find yourself in a situation where you want to override an endpoint name you can use the `one.name` or `many.name` options to override
@@ -1409,21 +895,18 @@ Lets create a new query endpoint that only returns completed `TodoItems`.
 First create a file named `types.ts`. And add the following.
 
 ```ts title="types.ts"
-import { ConnectionType, QueryArgsType } from '@nestjs-query/query-graphql';
+import { QueryArgsType } from '@nestjs-query/query-graphql';
 import { ArgsType } from '@nestjs/graphql';
 import { TodoItemDTO } from './dto/todo-item.dto';
 
-export const TodoItemConnection = ConnectionType(TodoItemDTO);
 
 @ArgsType()
 export class TodoItemQuery extends QueryArgsType(TodoItemDTO) {}
+export const TodoItemConnection = TodoItemQuery.ConnectionType;
 ```
 
 In the code above we export two types. `TodoItemConnection` and `TodoItemQuery`. Because of the way `@nestjs/graphql` and
 `nest` work we need to extend the `QueryArgsType` so that it will know the type to serialize into.
-
-**NOTE** `ConnectionType` will return the same Class each time you call it for a given type to prevent
- duplicate type errors when generating the graphql schema.
 
 In your resolver you can now create a new `completedTodoItems` method with the following:
 
