--- a/documentation/docs/persistence/typegoose/relations.mdx
+++ b/documentation/docs/persistence/typegoose/relations.mdx
@@ -5,7 +5,9 @@ title: Relations
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-Relations work a little differently in `typegoose` when compared to other relational ORMs such as `sequelize` or `typescript`. You can read more about relations (references) in `typegoose` [here](https://mongoosejs.com/docs/populate.html)
+Relations work a little differently in `typegoose` when compared to other relational ORMs such as `sequelize` or
+`typeorm`. You can read more about relations (references) in `typegoose` [here](https://mongoosejs.com/docs/populate
+.html)
 
 :::note
 There are multiple ways to set of references in Typegoose. These are intended as a starting point.
